# medical-data-platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
common/: __init__.py  config.py  logging.py  metadata.py  qc.py  storage.py  versioning.py  visualization.py
configs/: base.yaml  brats.yaml  lits.yaml  mimic.yaml
pipelines/brats/: evaluate.py  ingest.py  preprocess.py  run.py  split.py  train.py
pipelines/lits/: bias_audit.py  cohort_builder.py  dataset_card.py  quality_score.py  run.py
pipelines/mimic/: dicom_parser.py  fusion_dataset.py  report_parser.py  run.py
scripts/: generate_synthetic_data.py
tests/: conftest.py  test_common.py  test_end_to_end.py  test_pipelines.py  test_qc.py
